New routing system, file provider API and styling

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/QuantumSheep/quanticcloud#readme",
   "dependencies": {
+    "file-type": "^7.6.0",
     "socketio": "^1.0.0"
   },
   "devDependencies": {
