--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/QuantumSheep/quanticcloud#readme",
   "dependencies": {
-    "file-type": "^7.6.0",
+    "mime-types": "^2.1.18",
     "socketio": "^1.0.0"
   },
   "devDependencies": {
