--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socketio": "^1.0.0"
   },
   "devDependencies": {
+    "@angular/cli": "^1.7.4",
     "@types/node": "^9.6.4",
     "mocha": "^5.1.0"
   }
