--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quanticcloud",
   "version": "1.0.0",
   "description": "Quantic Cloud",
+  "main": "proxy.js",
   "scripts": {
     "install": "cd client && npm install && cd ../server && npm install && cd ..",
     "build": "cd client && ng build && cd ..",
@@ -22,6 +23,10 @@
   },
   "homepage": "https://github.com/QuantumSheep/quanticcloud#readme",
   "dependencies": {
+    "http-proxy": "^1.17.0",
     "pm2": "^2.10.2"
+  },
+  "devDependencies": {
+    "@types/node": "^10.0.0"
   }
 }
